--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<style>
+			html {
+				scroll-behavior: smooth;
+			}
 			body {
 				margin: 0;
 			}
